<resources>
    <string name="app_name">MediaPlayerDroid</string>
    <string name="MultimediaBrowserService">Media Player</string>
    <string name="MultimediaPlayer">MultimediaPlayer</string>
    <string name="str_loading">Carregando</string>
    <string name="TIME00_00">00:00</string>
    <string name="NO_GENRE_INFORMATION">Nenhuma informação de gênero</string>
    <string name="NO_ALBUM_INFORMATION">Nenhuma informação de album</string>
    <string name="NO_ARTIST_INFORMATION">Nenhuma informação de artista</string>
    <string name="NO_TITLE_INFORMATION">Nenhuma informação de título</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="PERMISSIONS_NOT_GRANTED_SHUTDOWN_APP">Permissões não concedidas. Encerrando aplicação.</string>
    <string name="LOADING">Carregando</string>
    <string name="limpar_lista">Limpar lista</string>
    <string name="str_voltar">Voltar</string>
    <string name="str_imagem_com_a_capa_do_lbum">Imagem com a capa do álbum</string>
    <string name="str_nenhuma_informacaoo_de_playlist">Nenhuma informação de playlist</string>
    <string name="str_nenhuma_informacao_de_titulo">Nenhuma informação de título</string>
    <string name="str_nenhuma_informacao_de_artista">Nenhuma informação de artista</string>
    <string name="str_nenhuma_informacao_de_album">Nenhuma informação de album</string>
    <string name="str_nenhuma_informaco_de_genero">Nenhuma informação de gênero</string>
    <string name="str_00_00">00:00</string>
    <string name="str_modo_de_reproducao_atual">Modo de reprodução atual</string>
    <string name="str_avancar_para_a_proxima_musica">Avançar para a próxima música</string>
    <string name="str_reproduzir_pausar_a_musica">Reproduzir/pausar a música</string>
    <string name="str_parar_a_reproducao_da_musica">Parar a reprodução da música</string>
    <string name="str_reproduzir_a_musica_anterior">Reproduzir a música anterior</string>
    <string name="str_posicao_atual_da_musica">Posição atual da música</string>
    <string name="str_minuto_e_segundo_atual_da_reproducao_da_musica">Minuto e segundo atual da reprodução da música</string>
    <string name="str_minutos_e_segundos_totais_da_musica_atual">Minutos e segundos totais da música atual</string>
    <string name="str_genero_da_musica_atual">Gênero da música atual</string>
    <string name="str_nome_do_album_da_musica_atual">Nome do album da música atual</string>
    <string name="str_album_do_artista">Album do artista</string>
    <string name="str_genero_da_musica">Gênero da música</string>
    <string name="str_artista_da_musica">Artista da música</string>
    <string name="str_nome_do_artista">Nome do artista</string>
    <string name="str_titulo_da_musica">Título da música</string>
    <string name="str_playlist_da_musica">Playlist da música</string>
</resources>